tests/ui/impl-trait/in-trait/missing-lt-outlives-in-rpitit-114274.stderr
error[E0261]: use of undeclared lifetime name `'missing`
  --> $DIR/missing-lt-outlives-in-rpitit-114274.rs:6:55
   |
LL |     fn iter(&self) -> impl Iterator<Item = Self::Item<'missing>>;
   |                                                       ^^^^^^^^ undeclared lifetime
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'missing` lifetime
   |
LL |     fn iter(&self) -> impl for<'missing> Iterator<Item = Self::Item<'missing>>;
   |                            +++++++++++++
help: consider introducing lifetime `'missing` here
   |
LL |     fn iter<'missing>(&self) -> impl Iterator<Item = Self::Item<'missing>>;
   |            ++++++++++
help: consider introducing lifetime `'missing` here
   |
LL | trait Iterable<'missing> {
   |               ++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0261`.
